--- a/project.html
+++ b/project.html
@@ -5,10 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Postcard</title>
-  
-      <link rel="stylesheet" href="project.css">
-
-  
+    <link rel="stylesheet" href="project.css">
 </head>
 
 <body>
@@ -37,11 +34,64 @@
   </div>
   
   <div class="members">
-    <div class="member"></div>
+    <div class="leader">
+      <h2 class="titles">Leaders</h2>
+      <br>
+      <div class="member" id="leader1">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="leader2">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+  </div>
+  <div class="developer">
+      <h2 class="titles">Developers</h2>
+      <br>
+      <div class="member" id="dev1">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="dev2">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="dev3">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="dev4">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="dev5">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+    <div class="member" id="dev6">
+      <h3 class='name'>John<br><br>Smith</h3>
+      <p class='intro'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.</p>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+    </div>
+  </div>
   </div>
   
-  
-
 </body>
 
 </html>
