--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,14 @@
 </head>
 
 <body id="body">
+<style src="projectscss.css"></style>
 <style type="text/css">
+
 body{
   scroll-behavior: auto;
   padding: 0;
   margin: 0;
-  background: #ccc;
+  background: transparent;
 }
 ul {
   position: relative;
@@ -37,18 +39,19 @@ ul li a {
   font-size: 1.0em;
 }
 ul li:hover{
-  font-size: 1.2em;
   font-weight: bold;
 }
 .nav{
-  top:20px;
+  padding-top:50px;
   text-decoration: none;
   font-size: 1.2em;
 }
 #navbar{
-  margin-left: 25%;
+  margin-left: 25.5%;
+  align-items: center;
+  justify-content: space-around;
   width: 50%;
-  padding-top: 50px;
+  padding-top: 70px;
   background: transparent;
   color:#000000;
   z-index: 2;
@@ -64,27 +67,18 @@ ul li:hover{
 figure {
   position: relative;
   float: left;
-  margin-left: 18px;
+  margin-left: 80px;
   margin-top: 50px;
   overflow: hidden;
   height: 350px;
   width: 350px;
-  background: rgba(243, 244, 244,0.2);
+  background: transparent;
   text-align: center;
   cursor: pointer;
   z-index: 3;
   transition: ease-in 0.5s;
   transition-property: transform;
-  /*box-shadow: 0 0 2px 1px black;*/
 }
-
-/*.grid figure figcaption {
-  padding: 2em;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.25em;
-  backface-visibility: hidden;
-}*/
 
 figure figcaption::before,
 figure figcaption::after {
@@ -192,8 +186,15 @@ figure.effect:hover h2{
 figure.effect:hover h2 {
   transition-delay: 0.05s;
 }
-
-
+.icons{
+  font-size:24px; 
+  padding-left:100px; 
+  margin-top:4px;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
 </style>
 
 <!-- particles.js container -->
@@ -201,7 +202,7 @@ figure.effect:hover h2 {
 <div id="navbar">
   <ul>
     <li><a href="index.html" class="nav">home</a></li>
-    <li><a href="projects.html" class="nav" style="font-size: 1.5em;font-weight: bold;color: #2C71AE;">projects</a></li>
+    <li><a href="projects.html" class="nav" style="font-weight: bold;">projects</a></li>
     <li><a href="../events.html" class="nav">events</a></li>
     <li><a href="../faq.html" class="nav">faq</a></li>
     <li><a href="../contact.html" class="nav">contact us</a></li>
@@ -213,50 +214,51 @@ figure.effect:hover h2 {
       <p class="description" id="additionRiceyak">An anonymous messaging platform dedicated to fosteringuniversity-wide culture and providing a user-friendly alternative to popular communication venues such as GroupMe.</p>
       <figcaption>
         <h2>Rice<span>Yak</span></h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>
         </figcaption>     
       </figure>
-    <figure class="effect" id="carpool">
+    <figure class="effect" id="carpool" onclick="enlarge('carpool','addCarpool');">
       <p class="projectName">Carpool</p>
-      <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+      <p class="description" id="addCarpool">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
       <figcaption>
         <h2><span>Car</span>pool</h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>   
         </figcaption>     
       </figure>
-    <figure class="effect" id="elections">
+    <figure class="effect" id="elections" onclick="enlarge('elections','addElections');">
       <p class="projectName">Elections</p>
-      <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+      <p class="description" id="addElections">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
       <figcaption>
         <h2>Elections<h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>
         </figcaption>     
       </figure>
-      <figure class="effect" id="ricebikes">
-      <p class="projectName">RiceBikes</p>
-      <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+      <figure class="effect" id="ricebikes" style="z-index:3;" onclick="enlarge('ricebikes','additionRicebikes');">
+      <p class="projectName" >RiceBikes</p>
+      <p class="description" id='additionRicebikes'>Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
       <figcaption>
         <h2>Rice<span>Bikes</span></h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>
         </figcaption>     
       </figure>
-    <figure class="effect" id="coffeehouse">
+    <figure class="effect" id="coffeehouse" onclick="enlarge('coffeehouse','addCoffeehouse');">
       <p class="projectName">Coffee House</p>
-      <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+      <p class="description" id="addCoffeehouse">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
       <figcaption>
         <h2><span>Coffee</span> House</h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>
         </figcaption>     
       </figure>
-    <figure class="effect" id="website">
+    <figure class="effect" id="website" onclick="enlarge('website','addWebsite');">
       <p class="projectName">Website</p>
-      <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+      <p class="description" id="addWebsite">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
       <figcaption>
         <h2>Website</h2>
-        <i class="fa fa-chain" style="font-size:24px; margin-left:50px; margin-top:4px;"><a href=""></a></i>
+        <h2 class="icons"><a href="project.html"><i class="fa fa-chain"></i></a></h2>
         </figcaption>     
       </figure>
     </div>
+
 
 
 
@@ -265,26 +267,9 @@ figure.effect:hover h2 {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
 <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
-<script  src="particles.js"></script>
-<script type="text/javascript">
-  function enlarge(name,descriptionName){
-    var target=document.getElementById(name);
-    var extra=document.getElementById(descriptionName);
-    if(target.style.zIndex=="3"){
-    target.style.zIndex="4";
-    target.style.transform="scale(2,2)";
-    target.style.transformOrigin="left";
-    setTimeout(function(){extra.innerHTML="An anonymous messaging platform dedicated to fosteringuniSversity-wide culture and providing a user-friendly alternative to popular communication venues such as GroupMe. An anonymous messaging platform dedicated to fosteringuniversity-wide culture and providing a user-friendly alternative to popular communication venues such as GroupMe.";},1000);
-    }
-    else{
-      target.style.zIndex="3";
-      target.style.transform="scale(1,1)";
-      target.style.transformOrigin="left";
-      setTimeout(function(){extra.innerHTML="An anonymous messaging platform dedicated to fosteringuniSversity-wide culture and providing a user-friendly alternative to popular communication venues such as GroupMe.";},1000);
-    }
-    
-  };
-</script>
+<script src="particles.js"></script>
+<script src="projectsjs.js"></script>
+
 
 </body>
 </html>
