--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@ ul li:hover{
   font-size: 1.2em;
 }
 #navbar{
-  margin-left: 25.5%;
+  margin-left: 26%;
   align-items: center;
   justify-content: space-around;
   width: 50%;
@@ -61,17 +61,21 @@ ul li:hover{
   height: 1000px;
 }
 .projectViewspace{
-  margin-left:38px;
+  margin-left: 15%;
   padding-top:75px; 
+  width: 80%;
+  /*display:flex;
+  justify-content: space-between;*/
+
 }
 figure {
   position: relative;
   float: left;
-  margin-left: 80px;
+  margin-left: 5%;
   margin-top: 50px;
   overflow: hidden;
   height: 350px;
-  width: 350px;
+  width: 35%;
   background: transparent;
   text-align: center;
   cursor: pointer;
@@ -201,11 +205,11 @@ a{
 <div id="particles-js"></div>
 <div id="navbar">
   <ul>
-    <li><a href="index.html" class="nav">home</a></li>
+    <li><a href="aboutus.html" class="nav">home</a></li>
     <li><a href="projects.html" class="nav" style="font-weight: bold;">projects</a></li>
-    <li><a href="../events.html" class="nav">events</a></li>
-    <li><a href="../faq.html" class="nav">faq</a></li>
-    <li><a href="../contact.html" class="nav">contact us</a></li>
+    <li><a href="events.html" class="nav">events</a></li>
+    <li><a href="faq.html" class="nav">faq</a></li>
+    <li><a href="contactus.html" class="nav">contact us</a></li>
   </ul>
 </div>
 <div class="projectViewspace">
@@ -268,7 +272,6 @@ a{
 <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
 <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
 <script src="particles.js"></script>
-<script src="projectsjs.js"></script>
 
 
 </body>
