--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 <head>
   <title class="next-head">About Us</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="particles1.css">
+  <link rel="stylesheet" href="aboutus.css">
 </head>
 
 <body>
@@ -15,11 +15,11 @@
 
 <div class="navbar">
   <ul>
-    <li><a href="index.html" style="font-weight: bold;">home</a></li>
+    <li><a href="aboutus.html" style="font-weight: bold;">home</a></li>
     <li><a href="projects.html">projects</a></li>
-    <li><a href="../events.html">events</a></li>
-    <li><a href="../faq.html">faq</a></li>
-    <li><a href="../contact.html">contact us</a></li>
+    <li><a href="events.html">events</a></li>
+    <li><a href="faq.html">faq</a></li>
+    <li><a href="contactus.html">contact us</a></li>
   </ul>
 </div>
 
@@ -27,7 +27,7 @@
   <div id="aboutus">
     <h1 id="t1">About Us</h1>
     <h2>We create...</h2>
-    <p>
+    <p id='p1'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
@@ -43,9 +43,9 @@
     </p>
   </div>
   <div id="vision">
-    <h1>Vision Statement</h1>
+    <h1 id="t2">Vision Statement</h1>
     <h2>Our Vision</h2>
-    <p>
+    <p id='p2'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
@@ -60,22 +60,61 @@
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
     </p>
   </div>
+</div>
   <div id="letters">
-    <h1>Letters from Chairs</h1>
-    <p>
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-      Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-    </p>
+    <h1 id="t3">Letters from Chairs</h1>
+    <div id='p3'>
+    <div class='letter'>
+      <div class='chair'>
+      <h3 class='name'>Jeffrey<br><br>Wang</h3>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+      </div>
+      <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+    <div class='letter'>
+      <div class='chair'>
+      <h3 class='name'>Cade<br><br>Ritter</h3>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+      </div>
+      <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+    <div class='letter'>
+      <div class='chair'>
+      <h3 class='name'>Savion<br><br>Lee</h3>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+      </div>
+      <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
 </div>
 </div>
 
