--- a/riceapps-master/riceapps-org-website-master/aboutus.html
+++ b/riceapps-master/riceapps-org-website-master/aboutus.html
@@ -72,6 +72,7 @@
     <div id='p3'>
     <div class='letter'>
       <div class='chair' id="Jeffrey">
+      <img src="../pics/jeffrey_wang.jpg">
       <h3 class='name'>Jeffrey<br><br>Wang</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -88,8 +89,9 @@
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
     <div class='letter'>
-      <div class='chair'>
-      <h3 class='name' id="cade">Cade<br><br>Ritter</h3>
+      <div class='chair' id="cade">
+      <img src="../pics/cade_ritter.jpg">
+      <h3 class='name'>Cade<br><br>Ritter</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
       <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -106,6 +108,7 @@
   </div>
     <div class='letter'>
       <div class='chair' id="savion">
+      <img src="../pics/savion_lee.jpg">
       <h3 class='name'>Savion<br><br>Lee</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
