--- a/riceapps-master/riceapps-org-website-master/index.html
+++ b/riceapps-master/riceapps-org-website-master/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="particles.css">
   <link rel="stylesheet" href="aboutus.css">
+  <link rel="stylesheet" href="PseudoElementsAnimationsTransitions/css/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 </head>
 
@@ -162,13 +163,18 @@ body{
   </ul>
 </div>
 
+<div class="circle">
+  <h1>RiceApps</h1>
+</div>
+
 <div class="about-us">
   <div id="aboutus">
     <h1 id="t1">About Us</h1>
-    <h2>We create...</h2>
+    <h2></h2>
     <p id='p1'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
+        <!-- Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
@@ -177,16 +183,16 @@ body{
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
+        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community. -->
     </p>
   </div>
-  <div id="vision">
-    <h1 id='t2'>Vision Statement</h1>
-    <h2>Our Vision</h2>
+  <div id="vision" style="margin-top:20%;">
+    <h1 id="t2">Vision Statement</h1>
+    <h2></h2>
     <p id='p2'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
+        <!-- Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
@@ -195,29 +201,17 @@ body{
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
+        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community. -->
     </p>
   </div>
 </div>
-  <div id="letters">
-    <h1 id='t3'>Letters from Chairs</h1>
+  <div id="letters" style="margin-top:20%;">
+    <h1 id="t3" style="margin-left:20%;">Letters from Chairs</h1>
     <div id='p3'>
     <div class='letter'>
-      <div class='chair'>
+      <div class='chair' id="Jeffrey">
+      <img src="../pics/jeffrey_wang.jpg">
       <h3 class='name'>Jeffrey<br><br>Wang</h3>
-      <i id="icon" class="fas fa-link fa-3x"></i>
-      </div>
-      <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-    <div class='letter'>
-      <div class='chair'>
-      <h3 class='name'>Cade<br><br>Ritter</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
       <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -225,10 +219,34 @@ body{
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
     <div class='letter'>
       <div class='chair'>
+      <img src="../pics/cade_ritter.jpg">
+      <h3 class='name' id="cade">Cade<br><br>Ritter</h3>
+      <i id="icon" class="fas fa-link fa-3x"></i>
+      </div>
+      <p class='content'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+    <div class='letter'>
+      <div class='chair' id="savion">
+      <img src="../pics/savion_lee.jpg">
       <h3 class='name'>Savion<br><br>Lee</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -237,10 +255,18 @@ body{
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </div>
 </div>
+
+
+
 
 <script>
 
@@ -287,39 +313,6 @@ body{
     }
   }
 
-  window.onscroll = function() {myFunction()};
-
-  var header1 = document.getElementById("t1");
-  var par1 = document.getElementById("p1");
-  var top1 = header1.offsetTop;
-  var bottom1 = par1.offsetHeight + top1;
-  var header2 = document.getElementById("t2");
-  var par2 = document.getElementById("p2");
-  var top2 = header2.offsetTop;
-  var bottom2 = par2.offsetHeight + top2;
-  var header3 = document.getElementById("t3");
-  var par3 = document.getElementById("p3");
-  var top3 = header3.offsetTop;
-  var bottom3 = par3.offsetHeight + top3;
-  function myFunction() {
-    if (window.pageYOffset >= top1 && window.pageYOffset < bottom1) {
-      header2.classList.remove("sticky");
-      header3.classList.remove("sticky");
-      header1.classList.add("sticky");
-    } else if (window.pageYOffset >= top2 && window.pageYOffset < bottom2) {
-      header1.classList.remove("sticky");
-      header3.classList.remove("sticky");
-      header2.classList.add("sticky");
-    } else if (window.pageYOffset >= top3 && window.pageYOffset < bottom3) {
-      header1.classList.remove("sticky");
-      header2.classList.remove("sticky");
-      header3.classList.add("sticky");
-    } else {
-      header1.classList.remove("sticky");
-      header2.classList.remove("sticky");
-      header3.classList.remove("sticky");
-    }
-  }
   </script>
 
 
