--- a/riceapps-master/riceapps-org-website-master/aboutus.html
+++ b/riceapps-master/riceapps-org-website-master/aboutus.html
@@ -36,43 +36,23 @@
     <p id='p1'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        <!-- Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community. -->
     </p>
   </div>
-  <div id="vision" style="margin-top:20%;">
+  <div id="vision">
     <h1 id="t2">Vision Statement</h1>
     <h2></h2>
     <p id='p2'>
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
         Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        <!-- Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community.
-        Rice Apps' mission is to empower developers to improve student life through technology at Rice. We develop apps that benefit the Rice community. -->
     </p>
   </div>
 </div>
-  <div id="letters" style="margin-top:20%;">
+  <div id="letters">
     <h1 id="t3" style="margin-left:20%;">Letters from Chairs</h1>
     <div id='p3'>
     <div class='letter'>
       <div class='chair' id="Jeffrey">
-      <img src="../pics/jeffrey_wang.jpg">
+      <img src="pics/jeffrey_wang.jpg">
       <h3 class='name'>Jeffrey<br><br>Wang</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -90,7 +70,7 @@
   </div>
     <div class='letter'>
       <div class='chair' id="cade">
-      <img src="../pics/cade_ritter.jpg">
+      <img src="pics/cade_ritter.jpg">
       <h3 class='name'>Cade<br><br>Ritter</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -108,7 +88,7 @@
   </div>
     <div class='letter'>
       <div class='chair' id="savion">
-      <img src="../pics/savion_lee.jpg">
+      <img src="pics/savion_lee.jpg">
       <h3 class='name'>Savion<br><br>Lee</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
