--- a/riceapps-master/riceapps-org-website-master/faq.html
+++ b/riceapps-master/riceapps-org-website-master/faq.html
@@ -33,16 +33,15 @@ ul li:hover{
   font-weight: bold;
 }
 .nav{
-  padding-top:50px;
   text-decoration: none;
   font-size: 1.2em;
 }
 #navbar{
-  margin-left: 26%;
+  margin-left: 25.5%;
   align-items: center;
   justify-content: space-around;
   width: 50%;
-  padding-top: 70px;
+  padding-top: 4em;
   background: transparent;
   color:#000000;
   z-index: 2;
