--- a/riceapps-master/riceapps-org-website-master/index.html
+++ b/riceapps-master/riceapps-org-website-master/index.html
@@ -103,7 +103,7 @@ body{
 .navbar {
   margin-left: 26%;
   width: 50%;
-  padding-top: 70px;
+  padding-top: 4em;
   background: transparent;
   z-index: 10;
 }
@@ -210,7 +210,7 @@ body{
     <div id='p3'>
     <div class='letter'>
       <div class='chair' id="Jeffrey">
-      <img src="../pics/jeffrey_wang.jpg">
+      <img src="pics/jeffrey_wang.jpg">
       <h3 class='name'>Jeffrey<br><br>Wang</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -228,7 +228,7 @@ body{
   </div>
     <div class='letter'>
       <div class='chair'>
-      <img src="../pics/cade_ritter.jpg">
+      <img src="pics/cade_ritter.jpg">
       <h3 class='name' id="cade">Cade<br><br>Ritter</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
@@ -246,7 +246,7 @@ body{
   </div>
     <div class='letter'>
       <div class='chair' id="savion">
-      <img src="../pics/savion_lee.jpg">
+      <img src="pics/savion_lee.jpg">
       <h3 class='name'>Savion<br><br>Lee</h3>
       <i id="icon" class="fas fa-link fa-3x"></i>
       </div>
