--- a/riceapps-master/riceapps-org-website-master/project.html
+++ b/riceapps-master/riceapps-org-website-master/project.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>(Forked) Horizhontal Timeline </title>
+  <title>Carpool</title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
@@ -53,13 +53,12 @@
   border-radius: 50%;
   color: black;  
   position: relative;
-  margin-left: 100px;
+  margin-left: 17%;
   margin-top: 70px;
   overflow: hidden;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  /*margin-bottom: 50px;*/
 }
 .member img{
 	position: absolute;
@@ -100,18 +99,21 @@
 	opacity: 0.2;
 }
 .developer{
-  width: 80%;
-  height: 700px;
+  width: 90%;
   margin-top:10px;
-  margin-left: 15%;
+  margin-left: 0;
+  height: 70rem;
   display: inline-block;
 }
-.developer h2{
-  letter-spacing: 1px;
-  font-size: 25px;
-  color: black;
-  font-style: italic;
-  margin-left: 30%;
+#border{
+	border: 1px solid black;
+	margin-left:17%;
+}
+#title{
+	margin-left: 25rem;
+	font-style: italic;
+	font-weight: bold;
+	font-size: 3rem;
 }
 </style>
 	<div class="project-space">
@@ -251,36 +253,37 @@
 
 
 	<div class="members">
+	<p id='title'>Developers</p>
 	  <div class="developer">
-	      <h2 class="titles"></h2>
+	  <div id='border'></div>
 	      <br>
 	      <div class="member" id="leader1">
-	      <img src="../pics/carpool/cade_ritter.jpg">
+	      <img src="pics/carpool/cade_ritter.jpg">
 	      <h3 class='name'>Cade<br><br>Ritter</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
 	    <div class="member" id="leader2">
-	    <img src="../pics/carpool/cecile_wang.jpg">
+	    <img src="pics/carpool/cecile_wang.jpg">
 	      <h3 class='name'>Cecile<br><br>Wang</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
 	      <div class="member" id="dev1">
-	      <img src="../pics/carpool/julian_ouyang.jpg">
+	      <img src="pics/carpool/julian_ouyang.jpg">
 	      <h3 class='name'>Julian<br><br>Ouyang</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
 	    <div class="member" id="dev2">
-	    <img src="../pics/carpool/miles_olson.jpg">
+	    <img src="pics/carpool/miles_olson.jpg">
 	      <h3 class='name'>Miles<br><br>Olson</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
 	    <div class="member" id="dev3">
-	    <img src="../pics/carpool/myra_ramdenbourg.jpg">
+	    <img src="pics/carpool/myra_ramdenbourg.jpg">
 	      <h3 class='name'>Myra<br><br>Ramdenbourg</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
 	    <div class="member" id="dev4">
-	    <img src="../pics/carpool/teju_manchenella.jpg">
+	    <img src="pics/carpool/teju_manchenella.jpg">
 	      <h3 class='name'>Teju<br><br>Manchenella</h3>
 	      <i id="icon" class="fas fa-link fa-3x"></i>
 	    </div>
