--- a/riceapps-master/riceapps-org-website-master/events.html
+++ b/riceapps-master/riceapps-org-website-master/events.html
@@ -34,7 +34,6 @@ ul li:hover{
   font-weight: bold;
 }
 .nav{
-  padding-top:50px;
   text-decoration: none;
   font-size: 1.2em;
 }
@@ -43,7 +42,7 @@ ul li:hover{
   align-items: center;
   justify-content: space-around;
   width: 50%;
-  padding-top: 70px;
+  padding-top: 4em;
   background: transparent;
   color:#000000;
   z-index: 2;
