--- a/riceapps-master/riceapps-org-website-master/projects.html
+++ b/riceapps-master/riceapps-org-website-master/projects.html
@@ -15,7 +15,7 @@
 body{
   scroll-behavior: auto;
   padding: 0;
-  margin: 0;
+  margin:auto;
   background: transparent;
 }
 ul {
@@ -51,7 +51,7 @@ ul li:hover{
   align-items: center;
   justify-content: space-around;
   width: 50%;
-  padding-top: 70px;
+  padding-top: 4em;
   background: transparent;
   color:#000000;
   z-index: 2;
